@@ -2,9 +2,11 @@
 
 	* tests/tinytest.R: New test driver using tinytest
 	* DESCRIPTION (Suggests): Added tinytest
+	* .travis.yml (install): Install tinytest
 
 	* inst/tinytest/testRaw.R: Converted from tests/raw.R
 	* inst/tinytest/testCRC32.R: Converted from tests/crc32.R
+	* inst/tinytest/testDigest2Int.R: Conv. from tests/digest2int.R
 
 2019-05-19  Dirk Eddelbuettel  <edd@debian.org>
 
